--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "description": "",
   "dependencies": {
     "typescript": "^5.8.3"
+    "php-express": "^1.0.0"
   }
+  "scripts": {
+    "start": "node server.js",
+    "php": "php -S 0.0.0.0:3000"
+  },
 }
