--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,29 @@
-.sass-cache/
-*.css.map
-*.sass.map
-*.scss.map
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+node_modules/
+dist/
+coverage/
+.nyc_output/
+.idea/
+.vscode/
+.DS_Store
+
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+.cache/
+
+jspm_packages/
+
+*.tsbuildinfo
+
+package-lock.json
+yarn.lock
+
+*.swp
+*.swo
