--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "radiacecascades",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "typescript": "^5.8.3",
-    "php-express": "^1.0.0"
+    "php-express": "^1.0.0",
+    "express": "^4.18.2" 
   }
 }
