--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "radiacecascades",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "node index.js",
     "php": "php -S 0.0.0.0:3000"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "typescript": "^5.8.3",
-    "php-express": "^1.0.0",
-    "express": "^4.18.2" 
+    "express": "^5.1.0",
+    "php": "^1.1.0",
+    "php-express": "^0.0.3",
+    "typescript": "^5.8.3"
   }
 }
