some script written

--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
+    "filereader": "^0.10.3",
     "node-sass": "^9.0.0",
     "php": "^1.1.0",
     "php-express": "^0.0.3",
     "sass": "^1.89.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "webpack": "^5.99.9"
   }
 }
