--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "php-express": "^0.0.3",
     "sass": "^1.89.1",
     "typescript": "^5.8.3",
+    "webgpu": "^0.2.12",
     "webpack": "^5.99.9"
+  },
+  "devDependencies": {
+    "@webgpu/types": "^0.1.61"
   }
 }
