--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "php": "^1.1.0",
     "php-express": "^0.0.3",
     "sass": "^1.89.1",
+    "tsup": "^8.5.0",
     "typescript": "^5.8.3",
     "webgpu": "^0.2.12",
     "webpack": "^5.99.9"
